--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,7 +15,7 @@
     </p>
     <ul>
         <li>harsh</li>
-        <li>gimrish</li>
+        <li>girish</li>
         <li>krish</li>
         <li>kush</li>
         <% for(var i=0; i<newListItems.length; i++){ %>
